--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -269,6 +269,7 @@ footer{
     color: #992928;
     position: relative;
     top: 70px;
+    font-family: 'SF UI Text Bold Italic';
 }
 
 .tgFooter{
