--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -28,12 +28,6 @@
 		url('../fonts/sf_ui_text_bold_italic.svg#sf_ui_text_bold_italic') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
-.wrapper {
-    margin: 0 auto;
-    width: 1200px;
-    background-color: rgba(165, 42, 42, 0.623);
-    height: 3px;
-  }
 
 
 
@@ -45,21 +39,30 @@ body{
 
 header{
     width: 100%;
+    height: 55px;
     margin: 0 auto;
     background-color: #9B9B9B;
+    margin: 0 auto;
+    position: fixed;
+    z-index: 999999;
+    top: 0;
+}
+
+.header-menu{
+    width: 1200px;
     margin: 0 auto;
 }
 
-nav{
-    width: 1200px;
-    height: 60px;
-    background-color: #9B9B9B;
-    margin: 0 auto;
+.header-menu::before{
+width: 100%;
+height: 100%;
 }
+
+
 
 .logo{
     font-family: 'SF UI Text Bold Italic';
-    font-size: 48px;
+    font-size: 43px;
     color: #992928;
 }
 
@@ -69,7 +72,7 @@ ul{
     text-decoration: none;
     font-family: 'SF UI Display Regular';
     position: relative;
-    bottom: 55px;
+    bottom: 50px;
 
 
 }
@@ -218,4 +221,99 @@ img{
 
 footer{
     margin-top: 50px;
+}
+
+.popup_box{
+    display: none;
+    position: fixed;
+    z-index: 99999999999999;
+    width: 100%;
+    height: 100%;
+    background-color: #00000052;
+    top: 0px;
+    font-family: 'SF UI Display Regular';
+    transition: 0.3s;
+}
+
+.popup_box.active{
+    display: block;
+    top: 0;
+    z-index: 99999999999999;
+
+}
+
+
+
+.popup_content{
+    width: 1200px;
+    height: 700px;
+    margin: 0 auto;
+    background-color: #FFFF;
+    border-radius: 5px;
+    margin-top: 25px;
+}
+
+.popup_text{
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.description{
+    text-align: left;
+}
+
+.banka_map {
+    width: 360px;
+    height: 600px;
+    margin-top: 70px;
+    position: relative;
+    right: 60px;
+}
+
+.clouse{
+    position: relative;
+    top: 20px;
+    left: 1050px;
+    font-size: 22px;
+    color: #9B9B9B;
+    cursor: pointer;
+}
+
+.redblock_map{
+    width: 10px;
+    height: 10px;
+    background-color: #992928;
+    border-radius: 3px;
+    position: relative;
+    top: 20px;
+}
+
+
+.clouse:hover{
+    color: #992928;
+    transition: 0.3s;
+}
+
+.banka_map:hover {
+    box-shadow: 0px 0px 0px 0px #00000057;
+    cursor: none ;
+}
+
+.title_map {
+    color: #992928;
+    font-size: 44px;
+    width: 500px;
+  
+}
+.redString_map {
+}
+.redblock_map {
+}
+.text_map {
+    margin-left: 25px;
+}
+.description {
+}
+.backShop {
 }
