--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,38 +28,37 @@
 		url('../fonts/sf_ui_text_bold_italic.svg#sf_ui_text_bold_italic') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
-.wrapper {
-    margin: 0 auto;
-    width: 1200px;
-    background-color: rgba(165, 42, 42, 0.623);
-    height: 3px;
-  }
-
-
-
-
 body{
     margin: 0 auto;
+    font-family: 'SF UI Display Regular';
 
 }
 
 header{
     width: 100%;
+    height: 55px;
     margin: 0 auto;
     background-color: #9B9B9B;
+    margin: 0 auto;
+    position: fixed;
+    z-index: 999999;
+}
+
+.header-menu{
+    width: 1200px;
     margin: 0 auto;
 }
 
-nav{
-    width: 1200px;
-    height: 60px;
-    background-color: #9B9B9B;
-    margin: 0 auto;
+.header-menu::before{
+width: 100%;
+height: 100%;
 }
+
+
 
 .logo{
     font-family: 'SF UI Text Bold Italic';
-    font-size: 48px;
+    font-size: 43px;
     color: #992928;
 }
 
@@ -69,7 +68,7 @@ ul{
     text-decoration: none;
     font-family: 'SF UI Display Regular';
     position: relative;
-    bottom: 55px;
+    bottom: 50px;
 
 
 }
@@ -111,13 +110,29 @@ li:hover{
 
 }
 
+.fixedContainer{
+    margin: 0 auto;
+    width: 1200px;
+
+}
+
+a{
+    text-decoration: none;
+    color: #ffff;
+}
+
+a:hover{
+    color: #992928;
+    transition: 0.3s;
+}
+
 
 .banka{
     width: 300px;
     position: relative;
     top: 120px;
     left: 260px;
-    z-index: 9999;
+    z-index: 10;
 }
 
 .bankaOne{
@@ -136,7 +151,7 @@ li:hover{
 
 h1{
     font-family: 'SF UI Display Bold';
-    z-index: 9999999;
+    z-index: 5;
     position: relative;
     font-size: 72px;
     color: #9B9B9B;
@@ -464,4 +479,121 @@ a:hover{
 
 .tgFooter{
     margin-left: 1155px;
+}
+
+.header-burger{
+    display: none;
+}
+
+@media screen and (max-width:768px) {
+    body{
+        margin: 0 auto;
+        font-family: 'SF UI Display Regular';
+    
+    }
+
+    .header-burger{
+        display: block;
+        position: absolute;
+        width: 30px;
+        height: 20px;
+        left: 1150px;
+        top: 15px;
+        z-index: 9999999999999;
+
+    }
+    .header-burger::after,
+    .header-burger::before{
+        content: '';
+        background-color: #992928;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+    }
+
+    .header-burger span{
+        position: absolute;
+        background-color: #992928;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+    }
+
+    .header-burger::after{
+        bottom: 0;
+    }
+    .header-burger::before{
+        top: 0;
+
+        
+    }
+    
+    header{
+        width: 100%;
+        margin: 0 auto;
+        background-color: #ffffff;
+        margin: 0 auto;
+         display: block;
+    }
+    
+    .header-menu{
+       position: fixed;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       background-color: #992928;
+       z-index: 9999;
+       top: -7000px;
+       transition: 0.3s;
+    }
+
+    .header-menu.active{
+        top: 50px;
+     }
+    
+    .header-menu::before{
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        z-index: 99999999;
+    }
+    
+    .logo{
+
+   
+    }
+    
+    ul{
+        display: block;
+        text-align: left;
+    
+    }
+    
+    li{
+        position: relative;
+        right: 190px;
+        text-align: left;
+        padding-top: 70px;
+        font-size: 40px;
+    }
+    
+    li:hover{
+   
+    
+    }
+    
+    .call{
+        display: none;
+    }
+    
+    .basket{
+        display: none;
+    }
+    
+    .call:hover{
+   
+    }
 }
