--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -315,5 +315,108 @@ footer{
 }
 .description {
 }
-.backShop {
+/* popup two */
+
+.header_popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #00000057;
+    top: -3000px;
+}
+
+.header_popup.active{
+    top: 0;
+    transition: 0.3s;
+    z-index: 9999999999;
+}
+
+
+.header_popup_content {
+    width: 1000px;
+    height: 500px;
+    background-color: white;
+    margin: 0 auto;
+    position: relative;
+    top: 9%;
+}
+
+.header_popup_text_redblock{
+    width: 1200px;
+    height: 600px;
+    background-color:#992928;
+    margin: 0 auto;
+    position: relative;
+    top: 9%;
+}
+.header_popup_text {
+    width: 900px;
+    height: 500px;
+    margin: 0 auto;
+}
+.header_popup_text_clouse {
+    position: relative;
+    left: 900px;
+    top: 30px;
+    font-size: 24px;
+    color: #9B9B9B;
+}
+.header_popup_text_title {
+    color: #992928;
+    font-size: 44px;
+}
+.header_popup_text_text {
+    color: #9B9B9B;
+    width: 400px;
+    text-align: left;
+    margin-top: 10px;
+    line-height: 30px;
+}
+.header_popup_text_form {
+    margin-top: 190px;
+    margin-left: 70px;
+}
+.header_popup_text_form_button {
+}
+
+.header_popup_text_clouse {
+    cursor: pointer;
+}
+
+.header_popup_text_clouse:hover{
+    color: #992928;
+    transition: 0.3s;
+}
+
+.header_popup_form {
+    font-size: 25px;
+    color: #525252;
+}
+.header_popup_form_placeaholder {
+    margin-top: 10px;
+    display: block;
+    width: 505px;
+    height: 30px;
+    color: #525252;
+}
+.header_popup_form_placeaholder_button {
+}
+
+
+.header_popup_form_placeaholder_button{
+    background-color: #992928;
+    color: #FFFF;
+    border: 0;
+    width: 290px;
+    height: 40px;
+    padding: 10px 100px;
+    font-size: 20px;
+    position: relative;
+    top: 25px;
+}
+
+.header_popup_form_placeaholder_button:hover{
+    background-color: #9B9B9B;
+    color: #992928;
+    transition: 0.3s;
 }
