--- a/assets/css/reviews.css
+++ b/assets/css/reviews.css
@@ -32,10 +32,21 @@
 
 
 
-    body {     font-family: 'SF UI Display Medium';  } 
+
+
+
+
+
+
+
+
+
+
+    body {     font-family: 'SF UI Display Regular';  } 
     .block1_text1 {font-family: 'SF UI Display Bold';}
     .logo {font-family: 'SF UI Text Bold Italic';}
     .logoFooter{font-family: 'SF UI Text Bold Italic';}
+    .title {font-family: 'SF UI Display Bold';}
 *{
     padding: 0;
     margin: 0;
@@ -46,57 +57,48 @@
     font-weight: 100;
 }
 
-a{
-    color: #FFFF;
-    text-decoration: none;
-   }
-   
-   a:hover{
-       color: #992928;
-       transition: 0.3s;
-   }
 
-.block1_text1 {
+.title {
     margin-top: 73px;
-    color: #922727;
-    font-size: 72px;
     margin-left: 27px;
+    color: #992928;
+    font-size: 72px;
 }
-.blocks {
-    margin-top: 73px;
-    margin-left: 7px;
+.content {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 36px;
+    grid-row-gap: 36px;
+    margin-top: 100px;
+    margin-bottom: 65px;
+}
+.content_block {
+    width: 400px;
+    height: 391px;
+    box-shadow: 0px 15px 40px rgba(25, 70, 186, 0.1);
     
 }
-.blocks_1 {
-    height: 391px;
-    width: 400px;
-    box-shadow: 0px 15px 40px rgba(25, 70, 186, 0.1);
-
-}
-.blocks1_text1 {
-    line-height: 25px;
+.content_block_text1 {
+    margin-left: 30px;
     margin-top: 30px;
-    margin-left: 30px;
     margin-right: 30px;
+    font-size: 15px;
+    line-height: 1.5;
+    
 }
-.blocks1_text2 {
-    width: 400px;
-    height: 50px;
-    margin-top: 55px;
+.content_block_text2 {
+    font-family: 'SF UI Display Bold';
+    font-size: 14px;
+}
+.content_block_source {
     display: flex;
-    align-items: center;
-    margin-left: 30px;
+    margin-top: 134px;
+    margin-left: 32px;
 }
-.blocks1_text2_img {
-    margin-left: 110px;   
-    margin-bottom: 15px;
+.content_block_img {
+    margin-left: 141px;
+    margin-top: -48px;
+
 }
-
-
-
 
 
 
