--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -28,6 +28,12 @@
 		url('../fonts/sf_ui_text_bold_italic.svg#sf_ui_text_bold_italic') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
+.wrapper {
+    margin: 0 auto;
+    width: 1200px;
+    background-color: rgba(165, 42, 42, 0.623);
+    height: 3px;
+  }
 
 
 
@@ -39,30 +45,21 @@ body{
 
 header{
     width: 100%;
-    height: 55px;
     margin: 0 auto;
     background-color: #9B9B9B;
     margin: 0 auto;
-    position: fixed;
-    z-index: 999999;
-    top: 0;
 }
 
-.header-menu{
+nav{
     width: 1200px;
+    height: 60px;
+    background-color: #9B9B9B;
     margin: 0 auto;
 }
 
-.header-menu::before{
-width: 100%;
-height: 100%;
-}
-
-
-
 .logo{
     font-family: 'SF UI Text Bold Italic';
-    font-size: 43px;
+    font-size: 48px;
     color: #992928;
 }
 
@@ -72,7 +69,7 @@ ul{
     text-decoration: none;
     font-family: 'SF UI Display Regular';
     position: relative;
-    bottom: 50px;
+    bottom: 55px;
 
 
 }
@@ -221,202 +218,4 @@ img{
 
 footer{
     margin-top: 50px;
-}
-
-.popup_box{
-    display: none;
-    position: fixed;
-    z-index: 99999999999999;
-    width: 100%;
-    height: 100%;
-    background-color: #00000052;
-    top: 0px;
-    font-family: 'SF UI Display Regular';
-    transition: 0.3s;
-}
-
-.popup_box.active{
-    display: block;
-    top: 0;
-    z-index: 99999999999999;
-
-}
-
-
-
-.popup_content{
-    width: 1200px;
-    height: 700px;
-    margin: 0 auto;
-    background-color: #FFFF;
-    border-radius: 5px;
-    margin-top: 25px;
-}
-
-.popup_text{
-    width: 1000px;
-    margin: 0 auto;
-    display: flex;
-}
-
-.description{
-    text-align: left;
-}
-
-.banka_map {
-    width: 360px;
-    height: 600px;
-    margin-top: 70px;
-    position: relative;
-    right: 60px;
-}
-
-.clouse{
-    position: relative;
-    top: 20px;
-    left: 1050px;
-    font-size: 22px;
-    color: #9B9B9B;
-    cursor: pointer;
-}
-
-.redblock_map{
-    width: 10px;
-    height: 10px;
-    background-color: #992928;
-    border-radius: 3px;
-    position: relative;
-    top: 20px;
-}
-
-
-.clouse:hover{
-    color: #992928;
-    transition: 0.3s;
-}
-
-.banka_map:hover {
-    box-shadow: 0px 0px 0px 0px #00000057;
-    cursor: none ;
-}
-
-.title_map {
-    color: #992928;
-    font-size: 44px;
-    width: 500px;
-  
-}
-.redString_map {
-}
-.redblock_map {
-}
-.text_map {
-    margin-left: 25px;
-}
-.description {
-}
-/* popup two */
-
-.header_popup{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #00000057;
-    top: -3000px;
-}
-
-.header_popup.active{
-    top: 0;
-    transition: 0.3s;
-    z-index: 9999999999;
-}
-
-
-.header_popup_content {
-    width: 1000px;
-    height: 500px;
-    background-color: white;
-    margin: 0 auto;
-    position: relative;
-    top: 9%;
-}
-
-.header_popup_text_redblock{
-    width: 1200px;
-    height: 600px;
-    background-color:#992928;
-    margin: 0 auto;
-    position: relative;
-    top: 9%;
-}
-.header_popup_text {
-    width: 900px;
-    height: 500px;
-    margin: 0 auto;
-}
-.header_popup_text_clouse {
-    position: relative;
-    left: 900px;
-    top: 30px;
-    font-size: 24px;
-    color: #9B9B9B;
-}
-.header_popup_text_title {
-    color: #992928;
-    font-size: 44px;
-}
-.header_popup_text_text {
-    color: #9B9B9B;
-    width: 400px;
-    text-align: left;
-    margin-top: 10px;
-    line-height: 30px;
-}
-.header_popup_text_form {
-    margin-top: 190px;
-    margin-left: 70px;
-}
-.header_popup_text_form_button {
-}
-
-.header_popup_text_clouse {
-    cursor: pointer;
-}
-
-.header_popup_text_clouse:hover{
-    color: #992928;
-    transition: 0.3s;
-}
-
-.header_popup_form {
-    font-size: 25px;
-    color: #525252;
-}
-.header_popup_form_placeaholder {
-    margin-top: 10px;
-    display: block;
-    width: 505px;
-    height: 30px;
-    color: #525252;
-}
-.header_popup_form_placeaholder_button {
-}
-
-
-.header_popup_form_placeaholder_button{
-    background-color: #992928;
-    color: #FFFF;
-    border: 0;
-    width: 290px;
-    height: 40px;
-    padding: 10px 100px;
-    font-size: 20px;
-    position: relative;
-    top: 25px;
-}
-
-.header_popup_form_placeaholder_button:hover{
-    background-color: #9B9B9B;
-    color: #992928;
-    transition: 0.3s;
 }
