--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -45,6 +45,15 @@
      /*Стилизация шрифтов конец*/
     
 
+
+
+
+
+
+
+
+
+
      header{
         width: 100%;
         margin: 0 auto;
@@ -123,6 +132,21 @@
            color: #992928;
            transition: 0.3s;
        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .contactsContainer{
     width: 1200px;
     margin: 0 auto;
@@ -321,7 +345,7 @@ input{
 
 
 
-
+/**
 footer{
     margin-top: 1px;
     width: 100%;
@@ -364,10 +388,66 @@ footer{
 
 .nav_btn {
     display: none;
-    outline: none; /* Для синий ободки */
+    outline: none; /* Для синий ободки 
     border: 0;
     background: transparent;
 }
+
+*/
+
+footer {
+    
+    height: 200px;
+    background: #949494;
+    margin-top: 52px;
+
+}
+.foot {
+    
+    display: flex;
+    
+
+}
+.foot_nav {
+    width: 1200px;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+.foot_logo {
+    font-size: 70px;
+    color: #922727;
+    margin-left: 27px;
+    margin-top: 0 auto;
+    display: flex;
+    font-family: 'SF UI Text Bold Italic';
+    position: relative;
+    top: 80%;
+
+}
+.foot_link {
+    padding-left: 40px;
+    letter-spacing: 2px;
+}
+.footer_icons_link {
+    margin-left: 126px;
+    font-size: 40px;
+}
+
+
+
+
+
+@media (max-width: 1200px) {
+    footer {
+        width: 1200px;
+    }
+}
+
+
 
 
 @media (max-width: 1000px) {
@@ -375,9 +455,7 @@ footer{
         margin-left: 14px;
         font-size: 30px;
     }
-    nav, header {
-        background-color: white;
-    }
+    
     li, .call, .basket {
         display: none;
     }
@@ -450,9 +528,72 @@ footer{
         display: flex;
         justify-content: center;
     }
+    footer {
+        width: 100%;
+        height: 450px;
+    }
+    .foot {
+        display: flex;
+        justify-content: center;
+       /* margin-left: -15px;*/
+       
+    }
+    .foot_logo {
+        font-size: 30px;
+        margin-left: 0px;
+        margin-top: 29px;
+        position: relative;
+        top: 0;
+    }
+    .foot_nav {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 95px;
+        /*margin-left: -15px;*/
+        line-height: 28px;
+    }
+    .foot_link {
+        padding-left: 0px;
+    }
+    .footer_icons_link {
+        margin-left: 0;
+        position: relative;
+        top: 40px;
+    }
+
+
+
+    /*navbar start*/
+    @media (max-width: 1000px) {
+        nav, header {
+            background-color: white;
+            width: 100%;
+        }
+    }
+
+
+
+
+    /*navbar end*/ 
+   
+
+
+
+
+
+@media (max-width: 318px) {
+    footer {
+        width: 320px;
+    }
+    .foot_nav {
+        width: 320px;
+    }
 }
 
 
 
 
+
+}
 
