--- a/assets/css/reviews.css
+++ b/assets/css/reviews.css
@@ -203,9 +203,7 @@ footer{
     position: relative;
     top: 50%;
 }
-.logo_foot {
-    
-}
+
 .logoFooter{
     font-size: 48px;
     color: #992928;
@@ -230,3 +228,178 @@ footer{
 .footer_icons_link2, .footer_icons_link3 {
     margin-left: 5px;
 }
+
+
+@media (max-width: 1000px) {
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        
+    }
+    .container {
+        
+        width: 320px;
+        overflow: hidden;
+        margin: 0 auto;
+        
+
+    }
+
+    .content {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 0 auto;
+        width: 290px;
+        margin-top: 46px;
+        margin-left: 0px;
+        
+    }
+    .title {
+        font-size: 30px;
+        text-align: center;
+        margin-left: 0px;
+
+    }
+    .content_block {
+        width: 320px;
+        height: 508px;
+    }
+    .content_block_img {
+        margin-left: 72px;
+    }
+    .content_block_source{
+        margin-top: 170px;
+        margin-top: 188px;
+
+    }
+}
+
+
+/*Footer Css Start*/ 
+
+
+
+
+
+footer {
+    
+    height: 200px;
+    background: #949494;
+    margin-top: 52px;
+
+}
+.foot {
+    
+    display: flex;
+    
+
+}
+.foot_nav {
+    width: 1200px;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+.foot_logo {
+    font-size: 70px;
+    color: #922727;
+    margin-left: 27px;
+    margin-top: 0 auto;
+    display: flex;
+    font-family: 'SF UI Text Bold Italic';
+    position: relative;
+    top: 80%;
+
+}
+.foot_link {
+    padding-left: 40px;
+    letter-spacing: 2px;
+}
+.footer_icons_link {
+    margin-left: 126px;
+    font-size: 40px;
+}
+a {
+    color: #FFFF;
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1280px) {
+    footer {
+        width: 1280px;
+    }
+}
+
+
+
+@media (max-width: 1000px) {
+
+    footer {
+        width: 100%;
+        height: 450px;
+    }
+    .foot {
+        display: flex;
+        justify-content: center;
+       /* margin-left: -15px;*/
+       
+    }
+    .foot_logo {
+        font-size: 30px;
+        margin-left: 0px;
+        margin-top: 29px;
+        position: relative;
+        top: 0;
+    }
+    .foot_nav {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 95px;
+        /*margin-left: -15px;*/
+        line-height: 28px;
+    }
+    .foot_link {
+        padding-left: 0px;
+    }
+    .footer_icons_link {
+        margin-left: 0;
+        position: relative;
+        top: 40px;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+@media (max-width: 305px) {
+    footer {
+        width: 320px;
+    }
+    .foot_nav {
+        width: 320px;
+    }
+}
+
+/*footer css end*/
